# rtkprocessing

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
sbp_decoding/: auto_sbp2pos.py
src/rtkprocessing/: rtkprocessing.py
